# Distributed-Vector-Database-Engine

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
vecdb/: .gitignore  CMakeLists.txt  insert_demo.py
vecdb/src/hnsw/: index.cpp  index.hpp  neighbour_store.cpp  neighbour_store.hpp
vecdb/src/proto/: vecdb.grpc.pb.cc  vecdb.grpc.pb.h  vecdb.pb.cc  vecdb.pb.h  vecdb.proto
vecdb/src/server/: auth_middleware.cpp  auth_middleware.hpp  grpc_server.cpp  grpc_server.hpp  http_api-2.hpp  http_api.cpp  http_api.hpp  main.cpp  rate_limiter.cpp  rate_limiter.hpp
vecdb/src/shard/: consistent_hash.cpp  consistent_hash.hpp  shard_manager.cpp  shard_manager.hpp
vecdb/src/simd/: distance.cpp  distance.hpp
vecdb/src/storage/: mmap_store.cpp  mmap_store.hpp  snapshot.cpp  snapshot.hpp
vecdb/src/wal/: wal.cpp  wal.hpp
vecdb/tests/bench/: bench_search.cpp
vecdb/tests/integration/: test_crash_recovery.cpp
vecdb/tests/unit/: test_distance.cpp  test_hnsw.cpp  test_server.cpp  test_shard.cpp  test_storage.cpp  test_wal.cpp
